fixed back buttons so they don't look bad on mobile. Hopefully this will fix how search bars look too but if not they should be an easy fix.

--- a/dog-city-app/src/css/BreedDetails.css
+++ b/dog-city-app/src/css/BreedDetails.css
@@ -13,9 +13,9 @@
   min-height: 100vh;
 }
 .details-back-button {
-  position: absolute;
-  top: 22.65vh;
-  left: 1em;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
   margin: 0.5em;
   padding: 0.25em 0.5em;
   background-color: #734c29;
@@ -32,7 +32,6 @@
 }
 
 .top {
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +44,7 @@
 
 .breed-details-container h1 {
   margin-top: 0;
-  font-size:xx-large;
+  font-size: xx-large;
   font-weight: bold;
   color: #412a17;
 }
@@ -66,7 +65,7 @@
 .breed-description {
   backdrop-filter: blur(3px);
 
-  margin-top:1em;
+  margin-top: 1em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,7 +78,7 @@
 }
 .breed-details-container h2 {
   color: #412a17;
-  font-size:x-large;
+  font-size: x-large;
 }
 
 ul {
@@ -92,7 +91,7 @@ ul {
   margin-bottom: 10px;
   font-size: 16px;
   color: #412a17;
-  font-weight:bold;
+  font-weight: bold;
 }
 
 .breed-stats {
@@ -105,7 +104,7 @@ ul {
   padding: 24px;
   border-radius: 8px;
   box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
-  color: #412a17
+  color: #412a17;
 }
 
 .breed-stats li {
@@ -113,7 +112,7 @@ ul {
   margin-bottom: 10px;
   font-size: 16px;
   color: #412a17;
-  font-weight:bold;
+  font-weight: bold;
 }
 
 .breed-chart {
