--- a/dog-city-app/src/css/Breeds.css
+++ b/dog-city-app/src/css/Breeds.css
@@ -15,9 +15,9 @@
   margin-bottom: 20px;
 }
 .back-button {
-  position: absolute;
-  top: 22.65vh;
-  left: 1em;
+  display:flex;
+  flex-direction: column;
+  width:fit-content;
   margin: 0.5em;
   padding: 0.25em 0.5em;
   background-color: #734c29;
